Add preInterimTermDate and postInterimTermDate
